# api-pytest-async

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TestTemplate.md  preparing.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
.hypothesis/constants/: 05509339f2cc40ea  0db2cd7887f19cdb  0f12cc22bad1d957  1d6f980fa0bcacd2  1e9407cbabdc3f1b  28d3c2917771d172  3532a86bb065f74c  3dc08e7250ce0e8b  65949ae090bfc82a  6add913e6a9f98e8  6e49ac1ec8b8153b  75f75c9ff58ed407  78543b3c050fd41a  7b85f406dd842aca  7e87fd82b361f17a  88acfa1692933982  8b85442fa51092f4  9286dda37a52705b  abd96f4e849df69e  ad70cb06d9c81d92  b2ba16c0639f6c2c  b45d85243625bb28  b48b32a4a30ad22a  bbb7ceda191ad866  c48eb463df01e116  c51cca1edbdf22e6  c592527c093b9c86  cc4c54cb943c4114  da39a3ee5e6b4b0d  de64836ff283549c  e1735b26039a893e  e9f595e3d0e523d1  f9548e7e6e0241f8
clients/: api_client.py
config/: settings.py
factories/: device_factory.py  organization_factory.py  user_factory.py
models/: organization_v2_models.py
models/auth/: models.py
models/devices/: models.py
models/organizations/: models.py
models/users/: models.py
openapi/: openapi.json
schemas/: organization_schema.json  user_schema.json
scripts/: generate_models_from_openapi.py  generate_tests_from_openapi.py
services/: auth_service.py  organizations_service.py  organizations_v1_service.py  organizations_v2_service.py  users_service.py
services/auth/: service.py
tests/: conftest.py
utils/: assertions.py  data_generator.py  endpoints.py  schema_diff.py  validators.py
(+22 files in other folders)
